# CardGame

./: .gitignore  CMakeLists.txt  CardGameLinux.sh  CardGameLinux.sh~  CardGameWin.bat  conanfile.txt  run.sh  run.sh~
.cache/clangd/index/: AppInterface.h.E0F81B93B021E280.idx  Application.cpp.792390EAFC78888F.idx  Application.h.09BFD1BCFE0B8426.idx  Background.h.222255A3DC11E951.idx  Card.h.5460CBE80F520C4E.idx  CardMath.cpp.C275836DE4319D31.idx  CardMath.h.3111C17C8861B027.idx  Component.cpp.67385DB54823C6A3.idx  Component.h.0121F411EA563F1B.idx  Config.h.7CA64E61B31DD375.idx  Deck.h.03C3A3003EA01D0A.idx  DropComponent.cpp.1F9F043824C81190.idx  DropComponent.h.BBF9EA4CFA68053F.idx  IMG.c.56BE6415C76101A0.idx  IMG_WIC.c.80CA608277C3E26C.idx  IMG_avif.c.70E032B37DBDE568.idx  IMG_bmp.c.F98166E6A7E109FA.idx  IMG_gif.c.EF62320BA6C971F6.idx  IMG_jpg.c.5DB1E1322C27DC68.idx  IMG_jxl.c.0D8C089F6E13B506.idx  IMG_lbm.c.6411D29A33881B4F.idx  IMG_pcx.c.8D0A3E3177157E0A.idx  IMG_png.c.1174F35548BA8ED3.idx  IMG_pnm.c.19F98737BD021CB8.idx  IMG_qoi.c.1CC59A90D60C5C11.idx  IMG_stb.c.4F6DAA2D9324B8F8.idx  IMG_svg.c.A9A35919A0E5E1A4.idx  IMG_tga.c.86C27EEC632C4605.idx  IMG_tif.c.5F6898A2405D50DA.idx  IMG_webp.c.C07738ED024ACEE0.idx  IMG_xcf.c.500CB3778BA20920.idx  IMG_xpm.c.A7DD2ACFC5B12955.idx  IMG_xv.c.CA4209A00194C26B.idx  Object.cpp.4197585FA7056675.idx  Object.h.1E2903F6AA54CA5C.idx  Place.h.C4371CA4B68C3450.idx  PlayerHand.h.7AC5EDBD49EEA51F.idx  Render.cpp.02EEBAD96AC5B792.idx  Render.h.6355FF0E70EAF3DF.idx  SDL.c.9FEA34DCCCC64833.idx  (+477 more)
Assets/Shaders/: fragment.shader
Targets/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
include/Application/: AppContext.h  AppContext.h~  AppInterface.h  AppInterface.h~  Application.h  Application.h~
include/Component/: Component.h  DropComponent.h  InputComponent.h  MoveComponent.h  SpriteComponent.h
include/Core/: Config.h  Core.h  Event.h  Event.h~  ResourceManager.h
include/Graphics/: Background.h  Render.h  Renderer.h  Shader.h  Sprite.h  Texture.h  test.h
include/Object/: Background.h  Card.h  Confirmation.h  Deck.h  DropTest.h  InputComponent.h  MoveComponent.h  Object.h  Place.h  PlayerHand.h  Ship.h  SpriteComponent.h  Table.h
include/Window/: Window.h  Window.h~  WindowEvents.h  WindowInputs.h  WindowInputs.h~
src/: Application.cpp  Application.cpp~  Background.cpp  CardMath.cpp  Component.cpp  DropComponent.cpp  Object.cpp  Render.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Sprite.cpp  SpriteComponent.cpp  Texture.cpp  Window.cpp  main.cpp  test.cpp
